# rekognition

./: README.md  pyproject.toml
src/rekognition/: L1.py  L2.py  L3.py  __init__.py  label.py  utils.py
tests/: test_moderate_and_detect_labels.py
